# local-supermemory

./: .gitignore  README.md  pyproject.toml
docs/: MCP Client Compatibility.md  handbuch.tex  phase2-roadmap.md
extensions/: README.md
extensions/dashboard/: __init__.py  __main__.py  integration.py  server.py
extensions/tests/: test_dashboard.py  test_phase1.py
local_supermemory/: chunking.py  embeddings.py  graph.py  server.py  store.py
