[project]
name = "local-supermemory"
version = "2.0.0"
description = "Lokale Supermemory mit Knowledge Graph + Ollama Embeddings"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "chromadb>=0.4.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pysbd>=0.3.4",
]

[project.scripts]
local-supermemory = "local_supermemory.server:main"
granaria-dashboard = "extensions.dashboard.server:main"

[tool.hatch.build.targets.wheel]
packages = ["local_supermemory", "extensions"]
# Ensure the dashboard HTML ships with the wheel
artifacts = ["extensions/dashboard/index.html"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
